# PoissonEditing

./: .gitignore  .gitmodules  CMakeLists.txt  DerivativeToImage.h  DerivativeToImage.txx  DerivativeToImageExample.cpp  DerivativesToImage.cxx  DerivativesToImage.h  DerivativesToImage.txx  DerivativesToImageWithNoise.cpp  FileSelector.cpp  FileSelector.h  Helpers.cpp  Helpers.h  Helpers.hxx  Helpers.txx  HelpersOutput.h  HelpersOutput.hxx  HelpersQt.h  HelpersQt.hxx  IndexComparison.cpp  IndexComparison.h  LaplacianToImage.cxx  Mask.cpp  Mask.h  Mask.hxx  PoissonCloning.cpp  PoissonCloning.h  PoissonCloning.hpp  PoissonCloning.txx  PoissonCloningExample.cpp  PoissonCloningNonInteractive.cpp  PoissonEditing.cpp  PoissonEditing.h  PoissonEditing.hpp  PoissonEditing.txx  PoissonEditingExample.cpp  PoissonEditingGUI.cxx  PoissonEditingGUI.h  PoissonEditingGUI.ui  (+17 more)
Documentation/: InsightJournal.bib  PoissonEditing.tex  PoissonHoleFilling.tex
Drivers/: CMakeLists.txt  DerivativesToImage.cpp  DerivativesToImage.cxx  LaplacianToImage.cxx  PoissonClone.cpp  PoissonCloning.cpp  PoissonEditing.cpp  PoissonFill.cpp  PoissonFillWithGuidance.cpp  PoissonFillingNeumann.cpp  PoissonFillingPoisson.cpp  PoissonFillingVariational.cpp  SeamlessTiling.cpp
GUI/: CMakeLists.txt  FileSelectionWidget.cpp  FileSelector.cpp  FileSelector.h  HelpersQt.cpp  HelpersQt.h  HelpersQt.hxx  ImageFileSelector.cpp  ImageFileSelector.h  Panel.cpp  PoissonCloningComputationObject.cpp  PoissonCloningComputationObject.h  PoissonCloningComputationThread.cpp  PoissonCloningComputationThread.h  PoissonCloningGUI.cxx  PoissonCloningGUI.h  PoissonCloningGUI.ui  PoissonCloningInteractive.cpp  PoissonCloningWidget.cxx  PoissonCloningWidget.h  PoissonCloningWidget.ui  PoissonEditingComputationObject.cpp  PoissonEditingComputationObject.h  PoissonEditingComputationThread.cpp  PoissonEditingComputationThread.h  PoissonEditingGUI.cxx  PoissonEditingGUI.h  PoissonEditingGUI.ui  PoissonEditingInteractive.cpp  PoissonEditingWidget.cxx  PoissonEditingWidget.h  PoissonEditingWidget.ui
Testing/: CMakeLists.txt  ImageCompare.cpp  TypeTesting.cpp
Testing/baselines/: LaplacianToImageOutput.mhd  LaplacianToImageOutput.raw  PoissonEditingOutput.mhd  PoissonEditingOutput.raw
Testing/data/F16/: F16Laplacian.mhd  F16Laplacian.raw  F16Mask.mask
